--- a/src/app/gui.html
+++ b/src/app/gui.html
@@ -1,7 +1,7 @@
 <div class='component-gui'>
 	<div class='navbar is-fixed-top has-shadow success' id='topnav'>
 		<div class="navbar-brand">
-			<span class='navbar-item'>RizzPI</span>
+			<span class='navbar-item'>G.O.A.T.</span>
 			<button class="button navbar-burger">
 				<span>Mobile menu A</span>
 				<span>Mobile menu B</span>
@@ -154,6 +154,11 @@
 					<h3 class="subtitle">Converting from Swagger / OpenAPI 2.0</h3>
 					Swagger / OpenAPI 2.0 definitions are converted using <a v-if="!window.intelligentBackend" href="https://mermade.org.uk/openapi-converter">this
 						online tool</a><span v-if="window.intelligentBackend">a built-in tool</span>.
+					<div>
+						<button>Build Manually</button>
+						<button>Build With AI</button>
+						<button onclick>Upload Specs</button>
+					</div>
 				</div>
 
 				<div class="tab-pane hidden container is-fluid" id="input">
